# mxmz-shared-stickynotes

./: ProjectHome.md
cpp/html/: test.html
cpp/httpsrv/: CMakeLists.txt  Makefile  httpresponse.hxx  httpsrv.cpp  mongo.hxx  tags
cpp/js/: utils.js
cpp/openid-rp/: CMakeLists.txt  confirm.json  db.sql  rp.h  rp_sqlite.cpp  rpcmd.cpp  rpsrv.cpp
java/.metadata/.plugins/org.eclipse.core.resources/.projects/StickyNotes/: .markers.snap
java/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
java/.metadata/.plugins/org.eclipse.epp.usagedata.recording/: usagedata.csv
java/.metadata/.plugins/org.eclipse.jdt.core/: 38712837.index  externalLibsTimeStamps
java/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
java/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
java/.metadata/.plugins/org.eclipse.wst.jsdt.core/: externalLibsTimeStamps
java/StickyNotes/src/net/mxmz/gae/stickynotes/: Datastore.java  MakeChannelServlet.java  StickyNotesServlet.java  Utils.java
java/StickyNotes/war/: index.html
java/StickyNotes/war/WEB-INF/: web.xml
trunk/cpp/html/: test.html
trunk/cpp/httpsrv/: CMakeLists.txt  Makefile  http_status_codes.hxx  httpresponse.hxx  httpsrv.cpp  lru_cache_map.hxx  mongo.hxx  split.hxx
trunk/cpp/jquery/: jquery-ui-1.8.12.custom.css
trunk/cpp/openid-rp/: CMakeLists.txt  db.sql  initiate.json  rp.h  rp_sqlite.cpp  rp_sqlite.h  rpcmd.cpp  rpsrv.cpp  sqlite.h
trunk/java/.metadata/.plugins/org.eclipse.core.resources/: .snap
trunk/java/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
trunk/java/.metadata/.plugins/org.eclipse.epp.usagedata.recording/: usagedata.csv
trunk/java/.metadata/.plugins/org.eclipse.jdt.core/: 2240603397.index  38712837.index  savedIndexNames.txt
trunk/java/StickyNotes/: .classpath  .project
trunk/java/StickyNotes/war/WEB-INF/: appengine-web.xml
trunk/java/StickyNotes/war/WEB-INF/appengine-generated/: datastore-indexes-auto.xml
trunk/java/StickyNotes/war/stickynotes/: index.html
(+7 files in other folders)
